--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,5 +1,4 @@
-#url=jdbc:mysql://localhost:3306/mytestdb?serverTimezone=GMT&useSSL=false
-url=jdbc:mysql://localhost:3306/java1?serverTimezone=GMT&useSSL=false
+url=jdbc:mysql://localhost:3306/mytestdb?serverTimezone=GMT&useSSL=false
 user=root
 password=123456
 driverClass=com.mysql.cj.jdbc.Driver
